Corrigindo rota PUT
